# dck

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION  bump.ps1  compose.yaml  go.mod  go.sum  install.ps1  install.sh  main.go  pyproject.toml  session-ses_0bef.md  uninstall.ps1  uninstall.sh  update-vps.sh  url.txt
.github/workflows/: build.yml  ci.yml  release.yml  snap.yml  tag.yml
cmd/: attach.go  blueprint.go  blueprint_repo.go  bootstrap.go  build.go  cluster.go  commit.go  console.go  consoleserve.go  cp.go  disk_default.go  disk_linux.go  down.go  events.go  exec.go  export.go  fn.go  fs.go  ftp.go  ftpserve.go  images.go  info.go  init_cmd.go  inspect.go  login.go  logs.go  port.go  ps.go  pull.go  push.go  rename.go  restart.go  rm.go  root.go  run.go  search.go  serve.go  service.go  set.go  sftp.go  (+11 more)
dck/: __main__.py  cli.py  client.py  compose.py  container.py  create.py  doctor.py  eggs.py  exec.py  i18n.py  image.py  lang.py  manifest.py  network.py  oci.py  paper_versions.json  port.py  runtime.py  startup.py  stats.py  templates.py  uninstall.py  update.py
docs/: README.md  build.md
docs/apt/: InRelease  Packages  Release  dck_1.10.3_amd64.deb  dck_1.11.0_amd64.deb  dck_1.12.0_amd64.deb  dck_1.13.0_amd64.deb  dck_1.15.0_amd64.deb
docs/en/: bots.md  cluster.md  compose-examples.md  compose.md  faas.md  usage.md  websites.md
docs/ru/: bots.md  cluster.md  compose-examples.md  (+4 more)
scripts/: add-apt-repo.sh  build-deb.sh  dck-pip-install.sh  install-apt.sh  update-apt-repo.sh
snap/: snapcraft.yaml
(+72 files in other folders)
