[build-system]
requires = ["setuptools>=68.0", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "dck"
version = "0.6.0"
description = "Native Linux container runtime — OCI pulls, namespaces, cgroups v2, overlayfs"
readme = "README.md"
authors = [
    {name = "dck"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
dck = "dck.cli:cli"

[tool.setuptools.packages.find]
include = ["dck*"]
